--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,10 @@
   "name": "node-complete-social-network-prep",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "axios": "^0.19.2",
+    "http-proxy-middleware": "^1.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
