--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.5.0",
     "mongoose": "^5.9.19"
   }
 }
