--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "server": "nodemon app.js",
+    "server": "env-cmd -f config/dev.env nodemon app.js",
     "client": "cd ../client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "connect-mongo": "^3.2.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
